Add navbar and font styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <header class="showcase">
-        
-    </header>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Document</title>
+    </head>
+
+    <!-- Navbar -->
+    <body>
+        <header class="showcase">
+            <div id="navbar" class="navbar">
+                <h1 class="logo">
+                    <span class="text-primary"
+                        ><i class="fas fa-book open"></i>ready</span
+                    >
+                    reel productions
+                </h1>
+            </div>
+        </header>
+    </body>
 </html>
