--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                     </ul>
                 </nav>
             </div>
+
+            <!-- center content -->
+            <div class="content">
+                <h1>Welcome Home</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Sequi, distinctio.
+                </p>
+            </div>
         </header>
     </body>
 </html>
