Add logo icon and adjust landing text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="css/navbar.css" />
+        <link rel="stylesheet" href="css/utilities.css" />
         <link rel="stylesheet" href="css/style.css" />
         <title>Document</title>
     </head>
@@ -12,10 +20,10 @@
         <header class="showcase">
             <div id="navbar" class="navbar">
                 <h1 class="logo">
-                    <span class="text-primary"
-                        ><i class="fas fa-book open"></i>ready</span
-                    >
-                    reel productions
+                    <span class="text-primary">
+                        <i class="fas fa-headphones-alt"></i>
+                        Ready</span
+                    >Reel
                 </h1>
                 <nav>
                     <ul>
@@ -28,7 +36,10 @@
 
             <!-- center content -->
             <div class="content">
-                <h1>Welcome Home</h1>
+                <h1>
+                    It All Comes Back To
+                    <span class="text-primary">Analog</span>
+                </h1>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sequi, distinctio.
