--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="column">
                         <div class="column-1">
                             <img
-                                src="images/radio_wall.jpg"
+                                src="images/analog_over.jpg"
                                 alt="Vintage Radios"
                             />
                         </div>
@@ -73,11 +73,11 @@
             </section>
 
             <!-- our process -->
-            <section class="flex-columns flex-reverse">
+            <section class="flex-columns">
                 <div class="row">
                     <div class="column">
                         <div class="column-1">
-                            <img src="images/piano.jpg" alt="Piano" />
+                            <img src="images/radio_wall.jpg" alt="Piano" />
                         </div>
                     </div>
                     <div class="column">
@@ -94,10 +94,23 @@
                             </p>
                         </div>
                     </div>
+                    <div class="column">
+                        <div class="column-3">
+                            <img src="images/piano.jpg" alt="Casette" />
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
 
-        <footer></footer>
+        <footer class="footer bg-dark">
+            <div class="social">
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+                <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+            </div>
+            <p>Copyright &copy; 2020 -ReadyReel</p>
+        </footer>
     </body>
 </html>
